Norms page tooltip position IE fix

--- a/app/assets/stylesheets/tests.sass
+++ b/app/assets/stylesheets/tests.sass
@@ -59,6 +59,7 @@ label
       border: 1px solid $color-warning
       border-radius: 4px
       bottom: 17px
+      left: 0
       cursor: pointer
       line-height: 14px
       padding: 10px
